--- a/Home/templates/index.html
+++ b/Home/templates/index.html
@@ -157,6 +157,7 @@
               <input class="form-check-input me-3" type="checkbox" id="flexCheckDefault{{ task.id }}"onclick="location.href='{% url 'Completedtask' task.id %}'"/>
           </div>
           <div>
+            <button type="button" class="btn btn-link" data-toggle="modal" data-target="#updateModal{{ task.id }}" style="color: #152d45;"><i class="fas fa-edit me-4 fs-5"></i></button>
             <a href="delete/{{task.id}}" id="{{task.id}}" style="color: #152d45"><i class="fas fa-trash fs-5"></i></a>
           </div>
       </td>
